app-of-apps/apps/echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fl-echo
  labels:
    app.kubernetes.io/name: fl-echo
    app.kubernetes.io/part-of: fl-app-of-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fl-echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fl-echo
    spec:
      containers:
        - name: fl-echo
          image: mendhak/http-https-echo:39
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
